worked on creating simple todo app

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
 .App {
+  margin: 50px 100px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.todo-list-container {
+  padding: 0 10px;
+  border: 1px black solid;
+  border-radius: 15px;
+  width: 80%;
+  margin: auto;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul {
+  list-style-type: none;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.input-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
 }
-
-.App-link {
-  color: #61dafb;
+.add-task-button {
+  background-color: lightgreen;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li {
+  border: 0.5px black solid;
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin: 1px 0;
+}
+.remove-button {
+  margin: 2px;
+  height: 80%;
 }
